--- a/geneva-street/src/components/Album/AlbumCard/AlbumCard.css
+++ b/geneva-street/src/components/Album/AlbumCard/AlbumCard.css
@@ -1,4 +1,4 @@
-.video-card {
+.album-card {
   height: 93%;
   padding: 10px;
   padding-bottom: 5px;
@@ -8,22 +8,30 @@
 
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
 }
-.video-card > img {
+.album-card > img {
   width: 100%;
   object-fit: contain;
   border: 2px solid black;
   border-radius: 10px;
+  aspect-ratio: 16/9;
+  background-color: black;
 }
-.video-card > h4 {
+.album-card > h3 {
+  width: 100%;
+  margin: 0;
+  padding: 10px;
+  text-align: center;
+}
+.album-card > h4 {
   width: 100%;
   margin: 0;
   padding: 0;
   text-align: center;
 }
-.video-card > h5 {
+.album-card > h5 {
   margin: 0;
   padding: 0;
   text-align: center;
