--- a/geneva-street/src/components/Video/VideoSearch/VideoSearch.css
+++ b/geneva-street/src/components/Video/VideoSearch/VideoSearch.css
@@ -1,8 +1,9 @@
-.search-accordion {
+.search-accordion-container {
   width: 90%;
   max-width: 700px;
   margin: 1rem auto;
-  margin-top: 10dvh;
+}
+.search-accordion {
 }
 
 .search-input {
@@ -27,7 +28,6 @@
   padding: 10px;
   display: flex;
   overflow-x: auto;
-  overflow-y: hidden;
   white-space: nowrap;
   max-width: 95%;
   height: 60px;
@@ -54,7 +54,7 @@
 }
 
 .icon-container::-webkit-scrollbar {
-  height: 0px;
+  height: 8px;
 }
 
 .icon-container::-webkit-scrollbar-track {
