--- a/geneva-street/src/index.css
+++ b/geneva-street/src/index.css
@@ -3,19 +3,13 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: var(--background);
+  color: var(--green-contrast);
+  background-color: var(--green-main);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-  /*-------------------------------*/
-  --background: #2a4335;
-  --primary: #ede5b5;
-  --secondary: #a26187;
 }
 
 body {
@@ -24,6 +18,9 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+
+  background-color: var(--background-main);
+  color: var(--background-contrast);
 }
 
 button:focus,
