--- a/geneva-street/src/components/Nav/Nav.css
+++ b/geneva-street/src/components/Nav/Nav.css
@@ -1,5 +1,5 @@
 .nav {
-  background-color: rgb(46, 51, 50);
+  background-color: var(--brown-main);
   width: 100%;
   height: 7dvh;
   position: fixed;
@@ -13,4 +13,10 @@
 }
 .nav * {
   color: inherit;
+}
+
+@media (max-width: 768px) {
+  .nav {
+    gap: 1rem;
+  }
 }
