--- a/geneva-street/src/components/Album/AlbumForm/AlbumForm.css
+++ b/geneva-street/src/components/Album/AlbumForm/AlbumForm.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 100%;
+  width: 90%;
 }
 
 .album-form-accordion {
@@ -19,4 +19,7 @@
   justify-content: space-between;
   max-width: 95%;
   margin: 0 auto;
+  outline: thick double;
+  outline-color: var(--brown-main);
+  padding: 5px;
 }
