--- a/geneva-street/src/components/Video/VideoCard/VideoCard.css
+++ b/geneva-street/src/components/Video/VideoCard/VideoCard.css
@@ -2,8 +2,7 @@
   height: 93%;
   padding: 10px;
   padding-bottom: 5px;
-  background-color: var(--primary-dark);
-  color: var(--primary-contrast);
+  background-color: var(--green-light);
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -19,14 +18,15 @@
   aspect-ratio: 16/9;
   background-color: black;
 }
-.video-card > h4 {
+.video-card > h5,
+.video-card > p {
   width: 100%;
   margin: 0;
   padding: 0;
   text-align: center;
+  color: black;
 }
-.video-card > h5 {
-  margin: 0;
-  padding: 0;
-  text-align: center;
+
+p {
+  font-size: 14px;
 }
