--- a/geneva-street/src/components/Video/VideoPage/TVLink/TVLink.css
+++ b/geneva-street/src/components/Video/VideoPage/TVLink/TVLink.css
@@ -14,9 +14,13 @@
   display: block;
 }
 
+.tv-link-container img:hover {
+  transform: scale(1.05);
+}
+
 .tv-link-text {
   text-decoration: none;
-  color: black;
+  color: var(--green-contrast);
   font-size: 16px;
   font-weight: bold;
 }
