--- a/geneva-street/src/index.css
+++ b/geneva-street/src/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   color: var(--green-contrast);
-  background-color: var(--green-main);
+  background-color: var(--green-dark);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -18,9 +18,6 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-
-  background-color: var(--background-main);
-  color: var(--background-contrast);
 }
 
 button:focus,
