--- a/geneva-street/src/components/Album/AlbumCard/AlbumCard.css
+++ b/geneva-street/src/components/Album/AlbumCard/AlbumCard.css
@@ -4,7 +4,7 @@
   padding-bottom: 5px;
   background-color: var(--green-main);
   border-radius: 10px;
-  color: var(--green-contrast);
+  color: black;
   display: flex;
   flex-direction: column;
   align-items: center;
