--- a/geneva-street/src/components/Video/VideoCard/VideoCard.css
+++ b/geneva-street/src/components/Video/VideoCard/VideoCard.css
@@ -2,7 +2,7 @@
   height: 93%;
   padding: 10px;
   padding-bottom: 5px;
-  background-color: var(--green-light);
+  background-color: var(--green-main);
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -18,13 +18,20 @@
   aspect-ratio: 16/9;
   background-color: black;
 }
-.video-card > h5,
+.video-card > h5 {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  color: var(--cream-light);
+}
+
 .video-card > p {
   width: 100%;
   margin: 0;
   padding: 0;
   text-align: center;
-  color: black;
+  color: var(--cream-light);
 }
 
 p {
