--- a/geneva-street/src/components/Album/AlbumPage/AlbumPage.css
+++ b/geneva-street/src/components/Album/AlbumPage/AlbumPage.css
@@ -74,18 +74,17 @@
   padding: 10px;
   background-color: var(--green-main);
   display: grid;
-  gap: 0.1rem;
-  grid-template-rows: 65% auto;
+  grid-template-rows: 70% auto;
 }
 
 .modal-content.no-tagged-people {
-  grid-template-rows: 80% 20%;
+  grid-template-rows: 75% 25%;
 }
 
 .modal-picture {
   width: 100%;
-  height: 100%;
-  margin: auto auto;
+  height: 80%;
+  margin: 0 auto;
   display: block;
   object-fit: contain;
 }
