--- a/geneva-street/src/components/LandingPage/LandingPage.css
+++ b/geneva-street/src/components/LandingPage/LandingPage.css
@@ -23,23 +23,18 @@ iframe {
   max-width: 80%;
 }
 
-.title {
-  margin-top: 2rem;
-  font-size: 26px;
-  max-width: 60%;
-  text-align: center;
-  font-weight: 700;
-  line-height: 1.9rem;
-}
-
 p {
-  font-size: 18px;
   max-width: 60%;
+  font-size: 18px;
+  line-height: 1.2rem;
 }
 
 .forgotten {
-  font-size: 18px;
-  text-align: left;
+  font-size: 24px;
+  text-align: center;
+  padding: 1rem;
+  margin: 2rem 0;
+  font-weight: 700;
 }
 
 @media (max-width: 680px) {
@@ -52,15 +47,12 @@ p {
     aspect-ratio: 16/9;
   }
 
-  .title {
-    font-size: 26px;
-    text-align: center;
-    max-width: 80%;
+  .forgotten {
+    font-size: 18px;
   }
 
   p {
-    font-size: 18px;
     max-width: 80%;
-    text-align: center;
+    font-size: 15px;
   }
 }
