--- a/geneva-street/src/components/LandingPage/LandingPage.css
+++ b/geneva-street/src/components/LandingPage/LandingPage.css
@@ -23,7 +23,8 @@ iframe {
   max-width: 80%;
 }
 
-p {
+.text-body{
+  max-width: 60%;
   font-size: 18px;
   line-height: 1.2rem;
 }
@@ -50,7 +51,7 @@ p {
     font-size: 18px;
   }
 
-  p {
+  .text-body{
     max-width: 80%;
     font-size: 15px;
   }
